Add organization memberships page
This page list all organization memberships and presents a form to create new users using the public API. It also has a button that can be used to log in with each user.

Page style was not addressed here (and probably never will).

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -7,9 +7,8 @@
 </div>
 
 <form action="{{ url_for('who_am_i') }}" method="POST" class="form">
-  <label>Organization Id:<input type="text" name="organization_id" value="" /></label>
+  <input placeholder="Organization id" type="text" name="organization_id" value="" />
   <button class="btn btn-primary" type="submit">Who am I?</button>
 </form>
-
 
 {% endblock %}
