Add edit membership page

--- a/templates/pages/members.html
+++ b/templates/pages/members.html
@@ -12,6 +12,11 @@
     <span>{{ membership["id"] }}</span>
     <span>{{ membership["full_name"] }}</span>
     <span>{{ membership["email"] }}</span>
+    <span>{{ membership["external_id"] }}</span>
+    <span>{{ membership["deleted"] }}</span>
+    <a href="{{ url_for('edit_membership', organization_id=organization_id, membership_id=membership["external_id"]) }}">
+      edit
+    </a>
     <form action="https://www.geekielab.com.br/login/launch" method="POST">
       {% for param, value in oauth_params.get(membership["id"], {}).iteritems() %}
         <input type="hidden" name="{{ param }}" value="{{ value }}" />
