--- a/static/css/main.css
+++ b/static/css/main.css
@@ -34,3 +34,15 @@ a {
  ****************************************************************************/
 
 /* Various other styles end */
+.membership-info {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-color: #f7f7f9;
+    padding: 10px;
+    border-radius: 3px;
+}
+
+.membership-form {
+  margin-top: 15px;
+}
